# glyphrush

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bindings/node/: README.md  package.json
bindings/node/src/: index.mjs
bindings/node/test/: client.test.mjs
bindings/python/: README.md  pyproject.toml
bindings/python/glyphrush/: __init__.py
bindings/python/tests/: test_client.py
bindings/wasm/: Cargo.toml  README.md  build.sh
bindings/wasm/pkg/: glyphrush_wasm.d.ts  glyphrush_wasm.js  glyphrush_wasm_bg.wasm  glyphrush_wasm_bg.wasm.d.ts
bindings/wasm/src/: lib.rs
bindings/wasm/test/: parity.mjs
crates/glyphrush-cli/: Cargo.toml
crates/glyphrush-cli/src/: backend.rs  backend_pdfium.rs  baselines.rs  bench.rs  cache.rs  cli_args.rs  commands.rs  eval.rs  eval_checks.rs  main.rs  manifest_gen.rs  ocr.rs  output.rs  parity.rs  process_util.rs  warm_bench.rs
crates/glyphrush-cli/tests/: cli.rs
crates/glyphrush-cli/tests/cli/: backend.rs  baseline.rs  bench.rs  bench_directory.rs  cache.rs  debug.rs  eval_manifest.rs  eval_manifest_gates.rs  gate_script.rs  harness.rs  inspect.rs  main.rs  manifest.rs  ocr.rs  parity.rs  parse.rs  warm_bench.rs
crates/glyphrush-core/: Cargo.toml
crates/glyphrush-core/src/: artifact.rs  classifier.rs  columns.rs  lib.rs  pipeline.rs  reading_order.rs  signals.rs  tables_positioned.rs  tables_ruled.rs  tables_text.rs  tables_text_patterns_budget.rs  tables_text_patterns_datasheet.rs  tables_text_patterns_pins.rs
crates/glyphrush-core/tests/: artifact.rs  classifier.rs  layout.rs  pipeline.rs
crates/glyphrush-core/tests/common/: mod.rs
crates/glyphrush-lopdf/: Cargo.toml
crates/glyphrush-lopdf/src/: lib.rs
docs/: artifact-schema.md  benchmarking.md  cli-reference.md  parity-notes-history.md  pipeline.md  releasing.md  remaining-work.md
examples/: README.md  bert-two-column-reading-order.md  gsa-voucher-ruled-grid-table.json  regenerate.sh  uspto-scanned-requires-ocr.json
scripts/: bench-liteparse.sh  setup-baselines.sh  verify.sh
test/: README.md  corpus.datasheets.json  corpus.v0.json  corpus.v0.layout.json  corpus.v0.ocr.json  corpus.v0.sources.json
test/extended/registry/: registry-fragment-a.json  registry-fragment-b.json
test/ocr-v0/: uspto-us4399515-scanned.p000000.txt  uspto-us4399515-scanned.p000001.txt  uspto-us4399515-scanned.p000002.txt  uspto-us4399515-scanned.p000003.txt  uspto-us4399515-scanned.p000004.txt  uspto-us4399515-scanned.p000005.txt
tools/: fetch_extended_corpus.py
tools/baselines/: README.md  common.sh  docling-text.sh  liteparse-no-ocr-text.sh  liteparse-text.sh  make_invoice_fixture.py  marker-text.sh  markitdown-text.sh  opendataloader-pdf-text.sh  pdfplumber-text.sh  pdftotext-text.sh  pymupdf-text.sh  pymupdf4llm-text.sh  pypdf-text.sh  verify_anchors.py
tools/bench/: warm_bench.mjs  warm_bench.py
tools/ocr/: README.md  tesseract-rendered-image.sh
