[workspace]
members = [
    "crates/glyphrush-core",
    "crates/glyphrush-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/agrim/glyphrush"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.177"
lopdf = "0.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
