[package]
name = "glyphrush-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Published to npm via bindings/wasm/build.sh, not to crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
glyphrush-core = { path = "../../crates/glyphrush-core" }
glyphrush-lopdf = { path = "../../crates/glyphrush-lopdf" }
lopdf.workspace = true
serde_json.workspace = true
sha2.workspace = true
wasm-bindgen = "0.2.123"

[features]
wasm_js = ["lopdf/wasm_js"]
