[package]
name = "glyphrush-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "glyphrush"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyphrush-core = { path = "../glyphrush-core" }
libc.workspace = true
lopdf.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
