[package]
name = "glyphrush-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "glyphrush"
path = "src/main.rs"

[features]
default = []
pdfium = ["dep:pdfium-auto", "dep:pdfium-render"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyphrush-core = { path = "../glyphrush-core" }
glyphrush-lopdf = { path = "../glyphrush-lopdf" }
libc.workspace = true
lopdf.workspace = true
pdfium-auto = { version = "0.3.0", optional = true }
pdfium-render = { version = "0.8", optional = true, default-features = false, features = ["pdfium_latest", "thread_safe"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
