[package]
name = "glyphrush-cli"
version = "0.1.0"
edition.workspace = true
description = "Fast, honest PDF parsing CLI: native text, layout, tables, and per-page quality flags"
keywords = ["pdf", "parser", "cli", "extraction", "tables"]
categories = ["command-line-utilities", "parser-implementations"]
readme = "../../README.md"
license.workspace = true
repository.workspace = true

[[bin]]
name = "glyphrush"
path = "src/main.rs"

[features]
default = []
pdfium = ["dep:pdfium-auto", "dep:pdfium-render"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
glyphrush-core = { version = "0.1.0", path = "../glyphrush-core" }
glyphrush-lopdf = { version = "0.1.0", path = "../glyphrush-lopdf" }
libc.workspace = true
lopdf.workspace = true
pdfium-auto = { version = "0.3.0", optional = true }
pdfium-render = { version = "0.8", optional = true, default-features = false, features = ["pdfium_latest", "thread_safe"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2.workspace = true
